# pe-be

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pr.diff  setup-react-project.sh
backend/: .env.example  .env.production.template  Dockerfile  LANGFUSE_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  pytest.ini  run.sh  run_import.py  test_import.py
backend/alembic/: env.py
backend/alembic/versions/: 09175590e760_add_other_workout_type_to_existing.py  0c1406c9d091_add_author_and_category_to_routines.py  0f4c6d7e8a9b_add_workout_visibility_for_public_reuse.py  148a1c691036_change_external_id_to_string.py  16318a1cf2bd_alter_workout_start_end_time_to_.py  1b2f4f77c0ad_add_chat_attachments_and_message_parts.py  1f4d2c8b9a10_add_reference_images_and_exercise_image_.py  20260424_0001_add_public_profile_fields.py  20260428_0001_add_upload_metadata_to_exercise_image_candidates.py  20260503_0001_add_routine_programs.py  20260514_0001_add_workout_photos.py  2bafb39426de_merge_heads_remove_exercise_types_.py  2f3c1d9a7b6e_add_missing_chat_updated_at_columns.py  2f6b1d8e4c3a_add_hot_path_indexes_for_common_reads.py  3c4d5e6f7a8b_drop_redundant_pk_shadow_indexes.py  3d9978befc19_remove_exercise_types_muscles_table.py  4f1d2c3b4a5e_add_unique_constraint_to_workout_types_name.py  4f8b6c1d2e3f_add_canonical_intensity_storage.py  5b870c040f55_add_indexes_for_exercise_type_joins.py  6472d4a8c42f_add_instructions_equipment_category_to_.py  660a3f8b29cf_merge_migration_heads.py  6f2a9d1c4b7e_normalize_fks_intensity_and_workout_time_check.py  70cb886ec8f7_initial_migration.py  7bb4d09b9169_fastapi_users_v12_add_id_to_oauth_.py  7d64e35ced2d_add_rir_to_sets_and_templates.py  7df0abdd1d04_seed_reference_data.py  8130ebb5cf0a_update_seed_data_with_pushups_and_more_.py  8fe769cc294e_add_deleted_at_to_exercise_sets.py  922e7a803726_add_sync_logs_table.py  924abd7d23b5_add_external_id_and_images_url_to_.py  a1b2c3d4e5f6_add_other_workout_type.py  a4a2341f82ad_use_timezone_aware_datetime.py  add001_exercise_template_notes.py  add002_add_duration_seconds_to_sets.py  add002_duration_seconds_sets.py  b1c34d5e6f7b_add_is_primary_to_exercise_muscles.py  b2be93819887_merge_multiple_heads.py  b60b7cbbd60b_add_recap_column_to_workouts.py  b9a1c2d3e4f5_add_recipe_visibility_enum_and_readonly.py  c2d4e6f7a8b9_make_default_intensity_unit_nullable.py  (+18 more)
backend/app/: app.py  config.py  database.py  db.py  main.py  models.py  schemas.py  users.py
backend/app/api/: __init__.py
backend/app/router/: exercise_sets.py  exercise_types.py  exercises.py  intensity_units.py  workout_types.py  workouts.py
backend/deploy/backups/: README.md  create-postgres-dump.sh  prune-postgres-backups.py  pull-postgres-backups.sh
backend/deploy/systemd/: README.md  pe-be-chat-attachment-cleanup.service  pe-be-chat-attachment-cleanup.timer  pe-be-close-stale-open-workouts.service  pe-be-close-stale-open-workouts.timer  (+6 more)
backend/src/: main.py
backend/tests/: conftest.py  test_admin_router.py  test_admin_routines.py  test_auth_logout.py  test_auth_session.py  test_cache_metrics.py  test_chat_cleanup.py  test_chat_crud.py  test_chat_llm_client.py  test_chat_parse_workout.py  test_chat_router_errors.py  test_chat_router_happy_paths.py  test_chat_service_edge_cases.py  test_chat_service_generate.py  test_chat_service_happy_paths.py  test_chat_tool_fallbacks.py  test_config.py  test_current_workout_utc_boundary.py  test_database.py  test_dedup_exercise_types.py  test_exercise_sets.py  test_exercise_sets_crud.py  test_exercise_sets_service.py  test_exercise_template_notes.py  test_exercise_thumbnail_keys.py  test_exercise_type_image_uploads.py  test_exercises.py  test_exercises_crud.py  test_exercises_service.py  test_genai_images.py  test_http_caching.py  test_image_uploads.py  test_integrity_error_mappers_unit.py  test_integrity_error_mapping.py  test_intensity_units.py  test_jobs_chat_attachment_cleanup.py  test_jobs_close_stale_open_workouts.py  test_jobs_exercise_image_cleanup.py  test_jobs_shared.py  test_logging_middleware.py  (+38 more)
(+667 files in other folders)
