[tool.poetry]
name = "fitness-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for fitness tracker app"
authors = ["Nicolas Leyton <ndleyton@uc.cl>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy", "oauth"], version = "^12.1.3"}
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.7.0"
pydantic-settings = "^2.0" 
psycopg2-binary = "^2.9.10"
setuptools = "^69.5.1"
httpx-oauth = "^0.16.1"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies] 
pytest = "^8.1.1"                  
pytest-cov = "^5.0.0"
httpx = "^0.27.0"                  


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
